[tool.poetry]
name = "langgraph-course-rag"
version = "0.1.0"
description = ""
authors = ["lkidane <lkidane@aimsammi.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
langchain = "^1.3.11"
beautifulsoup4 = "^4.15.0"
langgraph = "^1.2.7"
langchainhub = "^0.1.21"
langchain-community = "^0.4.2"
tavily-python = "^0.7.26"
python-dotenv = "^1.2.2"
black = "^26.5.1"
isort = "^8.0.1"
pytest = "^9.1.1"
langchain-chroma = "^1.1.0"
langchain-openai = "^1.3.3"
langchain-ollama = "^1.1.0"
langchain-huggingface = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
